--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,5 +27,8 @@ jobs:
     - name: Test
       run: go test -v ./...
 
-    - name: Lint
-      run: make golint
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v3
+      with:
+        version: v1.56.2
+        args: make golint
