--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,4 +31,4 @@ jobs:
       uses: golangci/golangci-lint-action@v3
       with:
         version: v1.56.2
-        args: make golint
+        args: -c .golangci.yaml --issues-exit-code 0
