--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,8 +14,6 @@ jobs:
       with:
         go-version: '1.22'
     - name: Build
-      run: make build
-    - name: Test
-      run: make test
+      run: go build -v ./...
     - name: Lint
       run: make golint
