--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,4 +16,7 @@ jobs:
     - name: Build
       run: go build -v ./...
     - name: Lint
-      run: make golint
+      uses: golangci/golangci-lint-action@v3
+      with:
+        version: v1.56.2
+        args: -c .golangci.yaml
